<resources>
    <string name="app_name">SecondHandTransactionSystem</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="invalid_account">Invalid Account</string>
    <string name="register_success">Register Success</string>
    <string name="commodity_name">Commodity Name</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="uncompleted_input">Uncompleted input</string>
    <string name="type">Type</string>
</resources>
